Updated Power BI project to HR & Attendance Dashboard

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
   <!-- Skills Section -->
   <section id="skills" class="skills">
     <h2>Skills</h2>
+
+    <h3 style="margin-bottom: 1.5rem; color: #0078ff;">Core Competencies</h3>
+    <ul>
+      <li>UI Design</li>
+      <li>UX Design</li>
+      <li>Wireframing</li>
+      <li>Prototyping</li>
+      <li>Visual Design</li>
+      <li>Typography</li>
+      <li>User Research</li>
+    </ul>
+
+    <h3 style="margin: 3rem 0 1.5rem; color: #0078ff;">Tools & Technologies</h3>
     <ul>
       <li>Adobe Photoshop</li>
       <li>Adobe Illustrator</li>
@@ -58,6 +71,7 @@
       <li>Power BI</li>
       <li>SQL</li>
       <li>HTML, CSS, JavaScript</li>
+      <li>React</li>
     </ul>
   </section>
 
@@ -81,12 +95,12 @@
 
       <!-- Power BI Project -->
       <div class="project-card">
-        <img src="images/projects/dashboard.jpg" alt="Power BI Dashboard">
-        <h3>Sales Dashboard – Power BI</h3>
-        <p>Interactive Power BI dashboard that tracks performance and KPIs in real-time.</p>
+        <img src="images/projects/powerbi-dashboard.png" alt="HR & Attendance Dashboard">
+        <h3>HR & Attendance Dashboard – Power BI</h3>
+        <p>From Excel data to an interactive dashboard in Power BI! Analyzing attendance trends and performance
+          breakdowns.</p>
         <div class="project-links">
-          <a href="https://app.powerbi.com/view?r=your-dashboard-link" target="_blank" class="btn">View Live
-            Dashboard</a>
+          <a href="assets/casestudies/powerbi-case.html" target="_blank" class="btn">View Case Study</a>
         </div>
       </div>
 
@@ -100,13 +114,15 @@
         </div>
       </div>
 
-      <!-- Photoshop Project 2 -->
+      <!-- E-commerce Project -->
       <div class="project-card">
-        <img src="images/projects/tech-event.jpg" alt="Tech Event Poster">
-        <h3>Tech Event Poster – Photoshop</h3>
-        <p>Clean and modern event poster designed using Photoshop for a technology summit.</p>
+        <img src="images/projects/ecommerce-main.png" alt="E-commerce Website UI/UX">
+        <h3>E-commerce Website UI/UX</h3>
+        <p>A comprehensive e-commerce mobile app prototype designed in Figma.</p>
         <div class="project-links">
-          <a href="images/projects/tech-event.jpg" target="_blank" class="btn">View Poster</a>
+          <a href="https://www.figma.com/proto/EGEfGJDTDvhOQ1Lge77Wj3/e-commerce--Copy---Copy-?page-id=0%3A1&node-id=3-3&p=f&viewport=25%2C33%2C0.59&t=gtfWityALXMkzFX2-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=3%3A3"
+            target="_blank" class="btn">View in Figma</a>
+          <a href="assets/casestudies/ecommerce-case.html" target="_blank" class="btn">View Case Study</a>
         </div>
       </div>
 
