Updated email address

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="contact-card">
         <i class="fa-solid fa-envelope"></i>
         <h3>Email</h3>
-        <p><a href="mailto:arish253545@gmail.com">arishdesigner@gmail.com</a></p>
+        <p><a href="mailto:arish253545@gmail.com">arish253545@gmail.com</a></p>
       </div>
 
       <div class="contact-card">
