Add Burger Crave poster project and case study

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
     <h2>Projects</h2>
     <div class="project-grid">
 
+      <!-- Burger Crave Project -->
+      <div class="project-card">
+        <img src="images/projects/burger-crave-poster.jpg" alt="Burger Cravings Promo Poster">
+        <h3>Burger Cravings Promo Poster</h3>
+        <p>A high-impact social media promotional poster designed in Photoshop featuring a creative "Warning" theme.</p>
+        <div class="project-links">
+          <a href="assets/casestudies/burger-crave-case.html" target="_blank" class="btn">View Case Study</a>
+        </div>
+      </div>
+
       <!-- Figma Project -->
       <div class="project-card">
         <img src="images/projects/file-manager-poster.png" alt="File Manager UI">
