Add Donut Delight project with Figma prototype and case study

--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
         </div>
       </div>
 
+
+      <!-- Donut Delight Project -->
+      <div class="project-card">
+        <img src="images/projects/donut-delight-poster.jpg" alt="Donut Delight Flavor Showcase">
+        <h3>Donut Delight – Flavor Showcase</h3>
+        <p>A vibrant and interactive product showcase prototype designed in Figma featuring delicious donut flavors.</p>
+        <div class="project-links">
+          <a href="https://www.figma.com/proto/5l0BZCA2VQgZZxtrY0zfL1/donut-project--Copy-?page-id=0%3A1&node-id=1-2&p=f&viewport=21%2C289%2C0.13&t=9NKaoznsifSGB8oh-1&scaling=scale-down&content-scaling=fixed"
+            target="_blank" class="btn">View in Figma</a>
+          <a href="assets/casestudies/donut-delight-case.html" target="_blank" class="btn">View Case Study</a>
+        </div>
+      </div>
+
       <!-- Figma Project -->
       <div class="project-card">
         <img src="images/projects/file-manager-poster.png" alt="File Manager UI">
