Add icons to Tools and Technologies section

--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
 
     <h3 style="margin: 3rem 0 1.5rem; color: #0078ff;">Tools & Technologies</h3>
     <ul>
-      <li>Adobe Photoshop</li>
-      <li>Adobe Illustrator</li>
-      <li>Figma</li>
-      <li>Power BI</li>
-      <li>SQL</li>
-      <li>HTML, CSS, JavaScript</li>
-      <li>React</li>
+      <li><i class="fa-brands fa-adobe" style="color: #FF0000;"></i> Adobe Photoshop</li>
+      <li><i class="fa-brands fa-adobe" style="color: #FF9A00;"></i> Adobe Illustrator</li>
+      <li><i class="fa-brands fa-figma" style="color: #F24E1E;"></i> Figma</li>
+      <li><i class="fa-solid fa-chart-pie" style="color: #F2C811;"></i> Power BI</li>
+      <li><i class="fa-solid fa-database" style="color: #336791;"></i> SQL</li>
+      <li><i class="fa-brands fa-html5" style="color: #E34F26;"></i> HTML <i class="fa-brands fa-css3-alt"
+          style="color: #1572B6;"></i> CSS <i class="fa-brands fa-js" style="color: #F7DF1E;"></i> JavaScript</li>
+      <li><i class="fa-brands fa-react" style="color: #61DAFB;"></i> React</li>
     </ul>
   </section>
 
