Add Ps and Ai logos for Photoshop and Illustrator

--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
 
     <h3 style="margin: 3rem 0 1.5rem; color: #0078ff;">Tools & Technologies</h3>
     <ul>
-      <li><i class="fa-brands fa-adobe" style="color: #FF0000;"></i> Adobe Photoshop</li>
-      <li><i class="fa-brands fa-adobe" style="color: #FF9A00;"></i> Adobe Illustrator</li>
+      <li><span
+          style="background: #31A8FF; color: #001E36; font-weight: bold; padding: 2px 6px; border-radius: 4px; font-size: 0.8rem; margin-right: 5px;">Ps</span>
+        Adobe Photoshop</li>
+      <li><span
+          style="background: #FF9A00; color: #330000; font-weight: bold; padding: 2px 6px; border-radius: 4px; font-size: 0.8rem; margin-right: 5px;">Ai</span>
+        Adobe Illustrator</li>
       <li><i class="fa-brands fa-figma" style="color: #F24E1E;"></i> Figma</li>
       <li><i class="fa-solid fa-chart-pie" style="color: #F2C811;"></i> Power BI</li>
       <li><i class="fa-solid fa-database" style="color: #336791;"></i> SQL</li>
