--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <!-- Resume Section -->
   <section id="resume" class="resume">
     <h2>Resume</h2>
-    <a href="resume/arishupdatedresume.pdf" download class="btn">Download Resume</a>
+    <a href="resume/arish design resume final.pdf" download class="btn">Download Resume</a>
   </section>
 
   <!-- Contact Section -->
