--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <header>
     <nav class="navbar">
-      <h1 class="logo">ARISH S<span>.</span></h1>
+      <h1 class="logo">ARISH S</h1>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
